# LeamOpenGL

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/leamopengl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cube-lib.cpp  esUtil.cpp  esUtil.h  rect-lib.cpp  triangle-lib.cpp
app/src/main/java/com/example/leamopengl/: CubeActivity.kt  MainActivity.kt  RectActivity.kt  TriangleActivity.kt
app/src/main/java/com/example/leamopengl/model/: CubeLib.kt  RectLib.kt  TriangleLib.kt
app/src/main/java/com/example/leamopengl/view/: CubeView.kt  RectView.kt  TriangleView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/leamopengl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
